--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <script src="https://kit.fontawesome.com/be41e6bfd5.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" href="../src/assets/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <head>
+        <meta charset="UTF-8" />
+        <script src="https://kit.fontawesome.com/be41e6bfd5.js" crossorigin="anonymous"></script>
+        <link rel="icon" type="image/png" href="../src/assets/logo.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>To do list</title>
-
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+        <title>To do list</title>
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.jsx"></script>
+    </body>
 </html>
